# sherry-guiwindow

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
implementation/imgui/: ImGuiGLConnector.cpp  ImGuiGLConnector.h  ImGuiSDLConnector.cpp  ImGuiSDLConnector.h
implementation/windowing/: ConcreteWindowManager.cpp  ConcreteWindowManager.h  Window.cpp  Window.h  WindowManager.cpp
interface/: IWindow.h  WindowManager.h
